@@ -268,6 +268,18 @@ RDB_unwrap_relation_type(const RDB_type *typ, int attrc, char *attrv[],
 RDB_attr *
 _RDB_tuple_type_attr(const RDB_type *tuptyp, const char *attrname);
 
+int
+_RDB_invrename_tuple(const RDB_object *, int renc, RDB_renaming renv[],
+                 RDB_object *restup);
+
+int
+_RDB_invwrap_tuple(const RDB_object *tplp, int wrapc, RDB_wrapping wrapv[],
+        RDB_object *restplp);
+
+int
+_RDB_invunwrap_tuple(const RDB_object *, int attrc, char *attrv[],
+        RDB_type *srctuptyp, RDB_object *restplp);
+
 RDB_bool
 _RDB_legal_name(const char *name);
 
